[package]
name = "fuselink-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", features = ["macros"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
fuselink-common = { path = "../fuselink-common" }
base64 = "0.21.0"
tower-http = { version = "0.4.0", features = ["compression-gzip"] }
