[package]
name = "fuselink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crossterm = "0.26.1"
ureq = { version = "2.6.2", features = ["json"] }
fuselink-common = { path = "../fuselink-common" }
base64 = "0.21.0"
